--- a/index.html
+++ b/index.html
@@ -12,25 +12,36 @@
 <body>
   <div id="app">
     <div class="container">
-      <b-table :data="papers" :narrowed="true" :paginated="true" :per-page="10">
+      <b-field grouped group-multiline>
         <template v-for="column in columns">
-          <b-table-column :key="column.id" v-bind="column" v-bind:custom-search="column.search">
-            <template v-if="column.searchable && column.options" #searchable="props">
-              <b-select v-model="props.filters[props.column.field]" size="is-small">
+          <template v-if="column.isSearchable">
+            <template v-if="column.options">
+              <b-select v-model="column.filter" size="is-small">
+                <option value=""></option>
                 <option v-for="option in column.options" :value="option.value">
                   {{ option.name }}
                 </option>
               </b-select>
             </template>
+            <template v-else>
+              <b-input :placeholder="column.label" v-model="column.filter" size="is-small"></b-input>
+            </template>
+          </template>
+        </template>
+      </b-field>
+
+      <b-table :data="filterPapers" :narrowed="true" :paginated="true" :per-page="10">
+        <template v-for="column in columns">
+          <b-table-column :key="column.id" v-bind="column">
             <template v-slot="props">
               <template v-if="column.field == 'title'">
                 {{ props.row[column.field] }}
                 <a :href="'https://dblp.uni-trier.de/search?q=' + props.row[column.field]" target="_blank">🔍</a>
               </template>
               <template v-else-if="column.field == 'category'">
-                <template v-if="props.row[column.field] && ccfcats[props.row[column.field]]">
-                  <span :title="ccfcats[props.row[column.field]].title">
-                    {{ ccfcats[props.row[column.field]].icon }}
+                <template v-if="props.row[column.field] && ccfcats[props.row[column.field]-1]">
+                  <span :title="ccfcats[props.row[column.field]-1].title">
+                    {{ ccfcats[props.row[column.field]-1].icon }}
                   </span>
                 </template>
               </template>
