update papers using new extractor, and add footer indicating data source

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 <a :href="'https://dblp.uni-trier.de/search?q=' + props.row[column.field]" target="_blank">
                   <b-icon icon="select-search" size="is-small"></b-icon>
                 </a>
-                <span v-html="props.row['highlight']" @click="expandNote(props.row);props.toggleDetails(props.row)"></span>
+                <span v-html="props.row['highlight']"
+                  @click="expandNote(props.row);props.toggleDetails(props.row)"></span>
                 <b-tooltip :label="props.row['publisher']">
                   <b-tag type="is-light is-info">{{props.row['pub']}}</b-tag>
                 </b-tooltip>
@@ -154,6 +155,24 @@
         </div>
       </b-collapse>
     </div>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+          <strong>Blockchain Survey</strong> by <a href="https://icerdesign.com">Liang Shuang(Icer)</a>
+          @<a href="https://www.sjtu.edu.cn/">SJTU</a>.
+          Data generated from <a href="https://dblp.org/xml/release/">{{filename}}</a>.
+          <br>
+          Using filter:
+          <span v-for="(count, word, idx) in stats">
+            <b-tooltip :label="count.toString()" type="is-light" position="is-top">
+              <span class="is-size-6 has-text-primary">{{word}}</span>
+            </b-tooltip>
+            <span v-if="idx != Object.keys(stats).length - 1">/</span>
+          </span>
+          .
+        </p>
+      </div>
+    </footer>
 
   </div>
   <!-- <script src="vue.global.prod.js"></script> -->
@@ -162,6 +181,7 @@
   <script src="buefy.min.js"></script>
   <script src="papers.js"></script>
   <script src="ccfcats.js"></script>
+  <script src="ccf.js"></script>
   <script src="app.js"></script>
 </body>
 
